[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Items/Pickupable/PickupableMap.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/PickupableItem.tscn" type="PackedScene" id=2]

[node name="MapItem" type="Node2D"]
script = ExtResource( 1 )

[node name="PickupableItem" parent="." instance=ExtResource( 2 )]

[node name="TypeIcon" type="Sprite" parent="."]

[node name="RoomBorder" type="Sprite" parent="."]
